[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/skelly.png" type="Texture" id=1]
[ext_resource path="res://prefabs/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/floor_shadow.png" type="Texture" id=3]
[ext_resource path="res://prefabs/Gem.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefabs/FlashShader.tres" type="Material" id=6]

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.1

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[sub_resource type="CircleShape2D" id=3]
radius = 3.16228

[node name="EnemyMob" type="RigidBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 15
physics_material_override = SubResource( 2 )
contacts_reported = 4
contact_monitor = true
linear_damp = 2.0
script = ExtResource( 2 )
lootDrop = ExtResource( 4 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.313726 )
texture = ExtResource( 3 )
vframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemy"]]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." groups=["enemy"]]
material = ExtResource( 6 )
position = Vector2( 1, -7 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_EnemyMob_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_EnemyMob_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
